packages/core/src/components/radio-checkbox/_radio-checkbox.scss
@include exports('ray-radio-checkbox') {
  $ray-radio-checkbox-border-width: 3px;
  $ray-radio-checkbox-width: 1rem;

  .#{$ray-class-prefix}radio,
  .#{$ray-class-prefix}checkbox {
    @include no-select;
    display: flex;
    position: relative;

    &__label {
      line-height: $ray-field-line-height;
      cursor: pointer;
      display: flex;

      &::before {
        box-sizing: border-box;
        content: '';
        background-color: $ray-color-white;
        border: $ray-radio-checkbox-border-width double $ray-color-black;
        width: $ray-radio-checkbox-width;
        height: $ray-radio-checkbox-width;
        position: relative;
        transition: box-shadow 0.15s ease;
        display: inline-block;
        margin-right: 1rem;
        top: 4px;
      }

      &:focus {
        outline: none;

        &::before {
          outline: 0;
          box-shadow: 0 0 0 0.25rem $ray-color-blue-20;
        }
      }
    }

    &__input {
      appearance: none;
      width: 0;
      height: 0;
      opacity: 0;

      &:focus {
        + .#{$ray-class-prefix}checkbox__label,
        + .#{$ray-class-prefix}radio__label {
          &::before {
            outline: 0;
            box-shadow: 0 0 0 0.25rem $ray-color-blue-20;
          }
        }
      }

      &:checked + .#{$ray-class-prefix}checkbox__label,
      &:checked + .#{$ray-class-prefix}radio__label {
        &::before {
          border-color: $ray-color-blue-50;
          background-color: $ray-color-blue-50 !important;
        }

        &:hover + .#{$ray-class-prefix}checkbox__label,
        &:hover + .#{$ray-class-prefix}radio__label {
          &::before {
            border-color: $ray-color-blue-70;
            background-color: $ray-color-blue-70;
          }
        }
      }

      &:not(:checked) {
        &:hover + .#{$ray-class-prefix}checkbox__label,
        &:hover + .#{$ray-class-prefix}radio__label {
          &::before {
            border-color: $ray-color-blue-50;
            background-color: $ray-color-blue-10;
          }
        }
      }

      &[disabled] {
        &:hover + .#{$ray-class-prefix}checkbox__label,
        &:hover + .#{$ray-class-prefix}radio__label {
          &::before {
            background-color: $ray-color-white;
          }
        }

        + .#{$ray-class-prefix}radio__label,
        + .#{$ray-class-prefix}checkbox__label {
          cursor: not-allowed;
          color: $ray-color-gray-30;

          &::before {
            border-color: $ray-color-gray-30;
          }
        }
      }
    }
  }

  /**
   * Radio
   */
  .#{$ray-class-prefix}radio__label {
    border-radius: 50%;
    box-shadow: 0 0 0 0 rgba(0, 0, 0, 0);
    transition: box-shadow 0.15s ease;

    &:focus {
      outline: 0;
      box-shadow: 0 0 0 0.25rem $ray-color-blue-20;
    }

    &::before {
      border-radius: 50%;
    }
  }

  /**
   * Checkbox
   */
  .#{$ray-class-prefix}checkbox__label::before {
    border-radius: $ray-border-radius;
  }
}

